apps/services/wger/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gym-server
  labels:
    app: gym-server
  annotations:
    link.argocd.argoproj.io/external-link: https://gym.gruber.dev.br
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: wger
  template:
    metadata:
      labels:
        app: wger
    spec:
      containers:
      - name: frontend
        image: nginx:stable
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
        - name: static
          mountPath: /home/wger/static
        - name: media
          mountPath: /home/wger/media
        ports:
        - name: web
          containerPort: 80
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 512Mi
      - name: backend
        image: wger/server:latest
        ports:
        - name: api
          containerPort: 8000
          protocol: TCP
        resources:
          requests:
            cpu: 150m
            memory: 512Mi
          limits:
            cpu: 450m
            memory: 768Mi
        volumeMounts:
        - name: static
          mountPath: /home/wger/static
        - name: media
          mountPath: /home/wger/media
      volumes:
        - name: static
          persistentVolumeClaim:
            claimName: wger-static
        - name: media
          persistentVolumeClaim:
            claimName: wger-media
        - name: nginx-config
          configMap:
            name: wger-proxy
